# particle-physics

./: Cargo.toml  README.md
crates/particle_physics/: Cargo.toml
crates/particle_physics/assets/shaders/: gpu_readback.wgsl
crates/particle_physics/src/: components.rs  gpu_readback.rs  lib.rs  main.rs
crates/spatial_hash/: Cargo.toml
crates/spatial_hash/src/: lib.rs
src/: components.rs  main.rs
