[package]
name = "particle_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy = "0.12.1"
bevy_egui = { version = "0.24.0", default-features = false, features = ["default_fonts"] }
egui_plot = "0.24.1"
rand = "0.8.5"
rand_core = "0.6.4"
