[package]
name = "particle_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy = "0.13.0"
bevy_egui = { version = "0.25.0", default-features = false, features = ["default_fonts", "render"] }
egui_plot = "0.26.2"
rand = "0.8.5"
rand_core = "0.6.4"
spatial_hash = { version = "0.1.0", path = "../spatial_hash" }
